--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,17 @@
-@import url('https://rsms.me/inter/inter.css');
-html { font-family: 'Inter', sans-serif; }
+@import url("https://rsms.me/inter/inter.css");
+html {
+  font-family: "Inter", sans-serif;
+}
 @supports (font-variation-settings: normal) {
-  html { font-family: 'Inter var', sans-serif; }
+  html {
+    font-family: "Inter var", sans-serif;
+  }
 }
 
 * {
   -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .body {
@@ -17,7 +21,7 @@ html { font-family: 'Inter', sans-serif; }
 .page {
   min-width: 320px;
   max-width: 1280px;
-  background-color:#2A2C2F;
+  background-color: #2a2c2f;
   color: white;
   padding: 24px 48px;
   margin: 0 auto;
@@ -34,7 +38,6 @@ html { font-family: 'Inter', sans-serif; }
   width: 100%;
   padding: 0 20px;
   margin-bottom: 56px;
-
 }
 .header__logo {
   border: 1px solid rgb(15, 228, 15);
@@ -43,8 +46,6 @@ html { font-family: 'Inter', sans-serif; }
   background-size: contain;
   height: 52px;
   width: 176px;
-
-
 }
 .header__lang-links {
   border: 1px solid rgb(15, 228, 15);
@@ -66,8 +67,7 @@ html { font-family: 'Inter', sans-serif; }
   text-decoration: none;
   max-width: 30px;
   max-height: 28px;
-  margin-left:18px;
-
+  margin-left: 18px;
 }
 .lead {
   width: 80%;
@@ -120,9 +120,8 @@ html { font-family: 'Inter', sans-serif; }
   text-transform: uppercase;
   min-width: 159px;
   min-height: 14px;
-  margin:0;
+  margin: 0;
 }
-
 
 .intro {
   width: 80%;
@@ -141,36 +140,37 @@ html { font-family: 'Inter', sans-serif; }
   font-weight: 900;
   font-size: 54px;
   line-height: 1;
-  margin:0 auto 40px auto;
+  margin: 0 auto 40px auto;
 }
 .intro__text {
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 26px;
-  margin:0 auto 32px auto;
+  margin: 0 auto 32px auto;
 }
 .intro__list {
   list-style: none;
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
   font-style: normal;
   font-size: 12px;
   line-height: 18px;
 }
 
 .photo-grid {
+  position: relative;
   border: 1px solid rgb(15, 122, 141);
   width: 100%;
   max-height: 671px;
-  padding:0;
+  padding: 0;
 }
 
 .photo-grid__template {
   position: relative;
   width: 100%;
   list-style: none;
-  padding:0;
+  padding: 0;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(4, 1fr);
@@ -178,76 +178,143 @@ html { font-family: 'Inter', sans-serif; }
 }
 
 .photo-grid__item {
-  max-width:100%;
+  max-width: 100%;
 }
 
-@media (max-width: 1024px)
-{
+@media (max-width: 1024px) {
   .photo-grid__template {
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(3, 1fr);
-}
+    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
 
 .places {
+  position: relative;
   width: 80%;
   border: 1px solid rgb(216, 24, 56);
+  padding: 92px 0 0 0;
+  margin: 0 auto;
 }
-.places__card {
-  border: 1px solid yellow;
 
+.two-columns {
+  border: 1px solid yellow;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 80px;
 }
-.places__card-title {
+
+.two-columns__first-column {
+  border: 1px solid rgb(119, 119, 8);
+  display: flex;
+  flex-direction: column;
+  max-width: 460px;
+  margin-right: 40px;
+}
+
+.two-columns__first-column-title {
   border: 1px solid rgb(230, 153, 52);
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
-
+  max-width: 100%;
+  max-height: 152px;
+  margin-top: 0;
+  margin-bottom: 48px;
 }
-.places__card-image {
+
+.two-columns__first-column-image {
   border: 1px solid rgb(230, 153, 52);
-  max-width: 460px;
-  max-height: 460px;
-
+  width: 460px;
+  height: 460px;
 }
-.places__card-website {
+
+.two-columns__second-column {
+  border: 1px solid rgb(90, 142, 172);
+  display: flex;
+  flex-direction: column;
+}
+
+.two-columns__second-column-url {
   border: 1px solid rgb(230, 153, 52);
-
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 12px;
+  letter-spacing: 0.2em;
+  margin: 106px 0 12px;
 }
-.places__card-paragraph {
+
+.two-columns__second-column-link {
+  border: 1px solid rgb(230, 153, 52);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  text-decoration-line: underline;
+  color: white;
+}
+
+.two-columns__second-column-paragraph {
   border: 1px solid rgb(230, 153, 52);
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 30px;
-  }
-
-
+  margin-top: 24px;
+  margin-bottom: 0;
+}
 
 .cover {
   width: 100%;
+  min-height: 740px;
   border: 1px solid orange;
+  background: url(../images/cover-trains.jpg) no-repeat;
+  background-size: contain;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
-.cover__title {
 
+.cover__title {
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  text-align: center;
+  width: 560px;
+  height: 152px;
+  border: 1px solid black;
 }
 .cover__subtitle {
-
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 22px;
+  text-align: center;
+  width: 360px;
+  height: 66px;
+  border: 1px solid black;
 }
+
 .footer {
   width: 100%;
   border: 1px solid orangered;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 .footer__container {
-
 }
 .footer__links {
-
+  list-style: none;
+  
 }
 .footer__link {
-
 }
 .footer__copyright {
-
 }
