--- a/styles/style.css
+++ b/styles/style.css
@@ -491,14 +491,114 @@ html {
   .footer {
     padding: 88px 24px 24px;
   }
+}
+
+@media screen and (max-width: 325px) {
+
+  .header {
+    padding: 16px 16px 48px 16px;
+    min-height: 42px;
+  }
+
+  .header__logo {
+    height: 42px;
+    width: 142px;
+  }
+  .header__lang-links {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .lead {
+    width: 100%;
+    padding: 0 16px 64px;
+  }
+  .lead__image {
+    max-width: calc(100% + 32px);
+  }
+
+  .lead__title {
+    font-size: 40px;
+    line-height: 44px;
+    margin-bottom: 16px;
+    min-height: 88px;
+  }
+  .lead__subtitle {
+    font-size: 16px;
+    line-height: 20px;
+    min-height: 40px;
+    margin-bottom: 40px;
+  }
+
+  .intro {
+    width: 100%;
+    padding: 0 16px;
+  }
+  .intro__card{
+    width: 100%;
+  }
+
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+
+  .intro__text {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .photo-grid {
+    padding: 64px 16px;
+  }
+
+  .photo-grid__template {
+    grid-template-rows: repeat(12, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 12px;
+  }
+  .places {
+    width: 100%;
+    padding: 0 16px;
+  }
+
+  .two-columns {
+    grid-template-columns: 288px;
+    grid-template-rows: minmax(min-content, max-content) 1fr;
+    grid-gap: 48px;
+    max-height: 963px;
+  }
+
+  .two-columns__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+
+  .two-columns__paragraph {
+    font-size: 16px;
+    line-height: 26px;
+  }
+
+  .two-columns__url-zone {
+    display: none;
+  }
+
+  .two-columns__image {
+    max-width: calc(100% + 32px);
+
+  }
 
 
+  .cover__link {
+    min-height: 480px;
+    padding: 115px 0;
+
+  }
+
+  .footer {
+    padding: 88px 24px 24px;
+  }
 }
 
 
-/* @media screen and (max-width: 425px) {
-  .photo-grid__template {
-    grid-template-rows: repeat(12, 1fr);
-    grid-template-columns: 1, 1fr;
-  }
-} */
+}
