--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,10 +1,10 @@
-@import url(../../header/__lang-link/_en/header__lang-link_en.css);
-@import url(../../header/__lang-link/_en/header__lang-link_ru.css);
-
-
 
 .header__lang-link {
   color: white;
+  text-decoration: none;
+  max-width: 30px;
+  max-height: 28px;
+  margin-left: 18px;
   transition: opacity 0.2s linear;
 }
 
