--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 @import url(../header/__logo/header__logo.css);
 @import url(../header/__lang-links/header__lang-links.css);
 @import url(../header/__lang-link/header__lang-link.css);
-
+@import url(../header/__lang-link/_selected/header__lang-link_selected.css);
 
 
 .header {
